*Empty MediaWiki Message*

--- a/Изи_панда.mw
+++ b/Изи_панда.mw
@@ -4,9 +4,9 @@
 | сӱрет = Ailurus fulgens RoterPanda LesserPanda.jpg
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Caniformia
 | инпратӱча = Arctoidea
 | кӱшылйамагат = Musteloidea
