*Empty MediaWiki Message*

--- a/Вӱдкома.mw
+++ b/Вӱдкома.mw
@@ -3,9 +3,9 @@
 | сӱрет = Fischotter Lutra lutra1.jpg
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = [[Шӧр пукшышо]]
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Caniformia
 | кӱшылйамагат =  	Musteloidea
 | йамагат = [[Mustelidae]]
