--- a/Кугу_гризон.mw
+++ b/Кугу_гризон.mw
@@ -3,9 +3,9 @@
 | сӱрет = Greater Grison area.png
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Caniformia
 | кӱшылйамагат =  	Musteloidea
 | йамагат = [[Mustelidae]]
