*Empty MediaWiki Message*

--- a/Изи_гризон.mw
+++ b/Изи_гризон.mw
@@ -3,9 +3,9 @@
 | сӱрет = Galictis.jpg
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Caniformia
 | кӱшылйамагат =  	Musteloidea
 | йамагат = [[Mustelidae]]
