--- a/Рожамак.mw
+++ b/Рожамак.mw
@@ -3,9 +3,9 @@
 | сӱрет = Wolverine on rock.jpg
 | сӱрет_вуймут =   
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora 
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | ӱлылтӱча = Caniformia
 | кӱшылйамагат =  	Musteloidea
 | йамагат = [[Mustelidae]]
