*Empty MediaWiki Message*

--- a/Луй.mw
+++ b/Луй.mw
@@ -3,9 +3,9 @@
 | сӱрет = Martes martes crop.jpg
 | сӱрет_вуймут =  ''Martes martes''
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | йамагат = [[Mustelidae]]
 | ӱлылйамагат Mustelinae
 | урлык = Martes
