--- a/Нерге.mw
+++ b/Нерге.mw
@@ -3,9 +3,9 @@
 | сӱрет = Badger-badger.jpg
 | сӱрет_вуймут =  
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | йамагат = [[Mustelidae]]
 | ӱлылйамагат Mustelinae 
 | урлык = Meles
