--- a/Шашке.mw
+++ b/Шашке.mw
@@ -4,9 +4,9 @@
 | сӱрет2 = European Mink area.png
 | сӱрет_вуймут = 
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora 
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | йамагат = [[Mustelidae]] 
 | ӱлылйамагат Mustelinae
 | урлык = Mustela 
