*Empty MediaWiki Message*

--- a/Коляйос.mw
+++ b/Коляйос.mw
@@ -3,9 +3,9 @@
 | сӱрет = Mustela nivalis -British Wildlife Centre-4.jpg
 | сӱрет_вуймут =  
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | йамагат = [[Mustelidae]]
 | ӱлылйамагат =Mustelinae
 | урлык = Mustela
