--- a/Американ_шашке.mw
+++ b/Американ_шашке.mw
@@ -3,9 +3,9 @@
 | сӱрет = Kunawodna3.JPG
 | сӱрет_вуймут =  
 | кугыжаныш = [[Янлык]]
-| пӧлка = Хордан (Chordata)
-| класс = Mammalia 
-| тӱча = Carnivora 
+| пӧлка = Хордан 
+| класс = [[Шӧр пукшышо]] 
+| тӱча = [[Шылгочшо]]
 | йамагат = [[Mustelidae]] 
 | урлык = Neovison
 | тӱрлык = Neovison vison
