*Empty MediaWiki Message*

--- a/Шылгочшо.mw
+++ b/Шылгочшо.mw
@@ -50,7 +50,7 @@
 **** Йамагат : [[Otariidae]] : 14 тӱрлык да 7 урлык
 **** Йамагат : [[Phocidae]] : 19 тӱрлык да 9 урлык
 
-[[Категорий:Сут-влак| ]]
+[[Категорий:Шылгочшо-влак| ]]
 {{stub}}
 
 [[ar:لواحم]]
