--- a/Изи_панда.mw
+++ b/Изи_панда.mw
@@ -20,7 +20,7 @@
 *''Ailurus fulgens fulgens'' F. G. Cuvier, 1825
 *''Ailurus fulgens refulgens'' Milne-Edwards, 1874
 
-[[Категорий:Сут-влак]]
+[[Категорий:Шылгочшо-влак]]
 {{stub}}
 
 {{Link FA|ca}}
