--- a/Тайра_(ыҥ-влак).mw
+++ b/Тайра_(ыҥ-влак).mw
@@ -3,3 +3,9 @@
 * [[Тайра (лӱм)|Тайра]] — марий ӱдырамаш лӱм.
 
 {{Шуко ончыктымаш-влак}}
+
+[[de:Taira (Begriffsklärung)]]
+[[en:Taira (disambiguation)]]
+[[fr:平]]
+[[ja:平]]
+[[fi:Taira]]
