--- a/Категорий:Танле_тын.mw
+++ b/Категорий:Танле_тын.mw
@@ -11,6 +11,7 @@
 [[bs:Kategorija:Pravoslavlje]]
 [[ca:Categoria:Cristianisme ortodox]]
 [[cs:Kategorie:Pravoslaví]]
+[[cy:Categori:Eglwys Uniongred]]
 [[da:Kategori:Den græsk ortodokse kirke]]
 [[de:Kategorie:Orthodoxie]]
 [[el:Κατηγορία:Ορθόδοξη Εκκλησία]]
@@ -19,8 +20,11 @@
 [[es:Categoría:Cristianismo ortodoxo]]
 [[fi:Luokka:Ortodoksinen kirkko]]
 [[fr:Catégorie:Orthodoxie]]
+[[frp:Catègorie:Égllése ortodoxe]]
+[[gl:Categoría:Igrexa Ortodoxa]]
 [[he:קטגוריה:נצרות אורתודוקסית]]
 [[hr:Kategorija:Pravoslavlje]]
+[[hu:Kategória:Ortodox egyházak]]
 [[ia:Categoria:Christianismo Orthodoxe]]
 [[id:Kategori:Kristen Ortodoks]]
 [[it:Categoria:Cristianesimo ortodosso]]
@@ -28,13 +32,18 @@
 [[ka:კატეგორია:მართლმადიდებლობა]]
 [[ko:분류:동방 정교회]]
 [[ksh:Saachjrupp:Ortodox]]
+[[la:Categoria:Ecclesiae Orthodoxae]]
 [[lb:Kategorie:Orthodoxie]]
+[[lmo:Categuria:Gesa Ortodòssa]]
 [[lt:Kategorija:Stačiatikybė]]
 [[lv:Kategorija:Pareizticība]]
 [[mk:Категорија:Православие]]
 [[nl:Categorie:Oosters-orthodoxe Kerk]]
+[[nn:Kategori:Ortodoks kristendom]]
+[[no:Kategori:Ortodoks kristendom]]
+[[oc:Categoria:Ortodoxia]]
 [[pl:Kategoria:Prawosławie]]
-[[pt:Categoria:Igreja Ortodoxa]]
+[[pt:Categoria:Ortodoxia]]
 [[ro:Categorie:Biserica Ortodoxă]]
 [[ru:Категория:Православие]]
 [[sh:Kategorija:Pravoslavlje]]
