--- a/Стрелитций.mw
+++ b/Стрелитций.mw
@@ -34,6 +34,7 @@
 [[hsb:Strelicija]]
 [[it:Strelitzia]]
 [[ja:ゴクラクチョウカ属]]
+[[koi:Стрелитция]]
 [[lt:Strelicija]]
 [[mrj:Стрелитци]]
 [[nl:Strelitzia]]
