--- a/Категорий:Танле_черке.mw
+++ b/Категорий:Танле_черке.mw
@@ -4,7 +4,7 @@
 
 [[ast:Categoría:Ilesia ortodoxa]]
 [[bg:Категория:Православни църкви]]
-[[ca:Categoria:Esglésies ortodoxes autocèfales]]
+[[ca:Categoria:Esglésies ortodoxes]]
 [[cs:Kategorie:Pravoslavné církve]]
 [[de:Kategorie:Orthodoxe Kirche]]
 [[el:Κατηγορία:Ορθόδοξες Εκκλησίες]]
@@ -19,7 +19,9 @@
 [[nn:Kategori:Ortodokse kyrkjesamfunn]]
 [[pl:Kategoria:Kościoły prawosławne]]
 [[pt:Categoria:Igreja Ortodoxa]]
+[[ro:Categorie:Biserica Ortodoxă]]
 [[ru:Категория:Православные церкви]]
+[[sh:Kategorija:Pravoslavne crkve]]
 [[sr:Категорија:Православна црква]]
 [[sv:Kategori:Ortodoxa kyrkor]]
 [[uk:Категорія:Православні церкви]]
