--- a/Категорий:Танле_тын.mw
+++ b/Категорий:Танле_тын.mw
@@ -44,7 +44,7 @@
 [[oc:Categoria:Ortodoxia]]
 [[pl:Kategoria:Prawosławie]]
 [[pt:Categoria:Ortodoxia]]
-[[ro:Categorie:Biserica Ortodoxă]]
+[[ro:Categorie:Ortodoxie]]
 [[ru:Категория:Православие]]
 [[sh:Kategorija:Pravoslavlje]]
 [[simple:Category:Eastern Orthodox Church]]
