--- a/Сапаев,_Эрик_Никитич.mw
+++ b/Сапаев,_Эрик_Никитич.mw
@@ -1,5 +1,5 @@
 [[Файл:Sapaev.jpg|200px|thumb|Эрик Сапаев]]
-'''Эрик Сапаев''' ([[1932]] [[4 Ӱярня|Ӱярня 4]], [[Йошкар-Ола]] - [[1963]] [[25 Пургыж|Пургыж 25]], [[Йошкар-Ола]]) — [[марий]] [[семлызе]], [[Совет Ушем]] семлызе-влак ушемын еҥже (1959 ий гыч), [[Олык Ипай лӱмеш кугыжаныш премий|Марий комсомолын Олык Ипай лӱмеш премийжын]] лауреатше (1968).
+'''Эрик Сапаев''' ({{Шочын|4|03|1932}}, [[Йошкар-Ола]] - {{Колен|25|02|1963}}, [[Йошкар-Ола]]) — [[марий]] [[семлызе]], [[Совет Ушем]] семлызе-влак ушемын еҥже (1959 ий гыч), [[Олык Ипай лӱмеш кугыжаныш премий|Марий комсомолын Олык Ипай лӱмеш премийжын]] лауреатше (1968).
 Икымше сем шинчымашым [[Палантай лӱмеш тӱвыра да сымыктыш колледж|Культпросветшколышто]] налын. [[Скрипка]] дене шокташ тунемын. 1953 гыч [[Озаҥысе кугыжаныш консерваторий]]ыште композицийлан тунемын. Консерваторий деч вара Йошкар-Олаште сем училищыште туныктен. "Акпатыр" лӱман икымше марий [[Опера|оперым]] возен.
 
 == Ӱмыргорно ==
