*Empty MediaWiki Message*

--- a/Харламов,_Валерий_Борисович.mw
+++ b/Харламов,_Валерий_Борисович.mw
@@ -120,7 +120,7 @@
 * [[1991]] ийыште аварий олмышто мрамор гыч ыштыме 500 килограмм нелытан шайбым да клюшкым шогалтеныт. Тушто возеныт: {{Cquote|Тыште руш хоккейын шӱдыржӧ йӧрыкталтын. Валерий Харламов. 
 (руш. Здесь погасла звезда русского хоккея. Валерий Харламов.)}}
 * [[1998]] ийыште [[Шайбан хоккейын Калык-влак кокласе федераций]]ын Хоккей чап Залыште Торонто олаште Харламовын лӱмжым курымешлан возен шынденыт. [[Владислав Третьяк]] дене пырля [[НХЛ]]-ыште модде тиде чапым налыныт. Тӱняште нине кок хоккеист-влак деч посна нигӧм тыге палемден огытыл.
-[[Файл:5110-0098-reverse.gif|right|250px|Кок теҥгеаш оксаште Валерий Харламовын чурийжым вераҥденыт.]]
+[[Файл:RR5110-0098R.png|right|250px|Кок теҥгеаш оксаште Валерий Харламовын чурийжым вераҥденыт.]]
 * [[2008]] ийыште [[17 Ага|Ага тылзын 17 кечынже]] [[Шайбан хоккейын Калык-влак кокласе федераций]]ын 100 ияш лӱмгечыжым пайремлыме лӱмеш жап кокласе 6 эн сай [[Хоккей|хоккеист-влакын]] лӱмыштым каласеныт: форвард-влак Валерий Харламов ден Сергей Макаров, капкаорол [[Владислав Третьяк]], канадысе форвард Уэйн Гретцки, швед орол Бёрье Сальминг.
 * Хоккей дене Российын чумыр командыштыже да ЦСКА клубышто № 17 Харламовын лӱмжӧ почеш курымешлан пеҥгыдемденыт. Тиде номер дене тетла нигӧ модын ок керт. Лач хоккеистын эргыже - Александр гына модын.
 * 2009 ийыште Российын Рӱдӧ банкше Валерий Харламов шарнымашеш тудын чурийже дене 2 теҥгеаш ший оксам лукташ тӱҥалме нерген увертарен. Тыге, Харламов деч посна эше Александр Мальцев ден Всеволод Бобровмытын чурийыштым оксаште вераҥдыме.
