--- a/Гербера.mw
+++ b/Гербера.mw
@@ -18,7 +18,7 @@
 [[Файл:Gerbera farben.JPG|thumb|right|230px|<font color="grey">Гербера</font>]] 
 [[Файл:Gebera - verschiedene Farben.jpg|thumb|right|230px|<font color="grey">Гербера</font>]]
 
-'''Гербера''' ({{lang-la|Gerbera}} ) –  [[Asteraceae]] кушкыл-влакын тукымыш пура, [[Кечывалвел Америка|Кечывалвел Америкын]], [[Африка|Африкын]]  [[Азий]]ын да шуко верлаште кушшо [[пеледыш (кушкыл)|пеледыш]]. 
+'''Гербера''' ({{lang-la|Gerbera}} ) –  [[Asteraceae]] кушкыл-влакын тукымыш пура, [[Кечывалвел Америка|Кечывалвел Америкын]], [[Африка|Африкын]]  да [[Азий]]ын шуко верлаште кушшо [[пеледыш (кушкыл)|пеледыш]]. 
 
 
 
