--- a/Гербера.mw
+++ b/Гербера.mw
@@ -126,3 +126,31 @@
 
 [[Категорий:Кушкыл]]
 {{stub}}
+
+[[ar:جربيرا]]
+[[ca:Gerbera]]
+[[cy:Gerbera]]
+[[de:Gerbera]]
+[[en:Gerbera]]
+[[es:Gerbera]]
+[[et:Gerbera]]
+[[fi:Gerbera]]
+[[fr:Gerbera]]
+[[hu:Gerbera]]
+[[id:Herbras]]
+[[it:Gerbera]]
+[[ja:ガーベラ]]
+[[koi:Гербера]]
+[[lt:Gerbera]]
+[[ml:ജെർബെറാ]]
+[[mrj:Гербера]]
+[[nl:Gerbera]]
+[[pl:Gerbera]]
+[[pt:Gerbera]]
+[[ro:Gerbera]]
+[[ru:Гербера]]
+[[sv:Gerbera]]
+[[tr:Jerbera]]
+[[udm:Гербера]]
+[[vi:Đồng tiền (hoa)]]
+[[zh:非洲菊]]
