--- a/Акерманий.mw
+++ b/Акерманий.mw
@@ -17,7 +17,7 @@
 '''Акерманий''' ({{lang-la|Ackermania}} ) –  [[Орхидей-влак]] кушкыл-влакын тукымыш пура, [[Америка|Америкын]] шуко верлаште кушшо [[пеледыш (кушкыл)|пеледыш]]. Чылаже 5 еш куэ уло.
 
 == Тӱрлык-влак == 
-*''Ackermania caudata'' : Перу (Cordillera del Cóndor), [[Колумбий']] да [[Эквадор]].
+*''Ackermania caudata'' : Перу (Cordillera del Cóndor), [[Колумбий]] да [[Эквадор]].
 *''Ackermania cornuta''
 *''Ackermania hajekii'':  [[Перу]].  
 *''Ackermania jarae'':  [[Huánuco]], Перу.
@@ -29,6 +29,7 @@
 
 [[en:Ackermania]]
 [[es:Ackermania]]
+[[koi:Акермания]]
 [[mrj:Акермани]]
 [[nl:Ackermania]]
 [[vi:Ackermania]]
