*Empty MediaWiki Message*

--- a/Токташева-Виноградова,_Эльвира_Александровна.mw
+++ b/Токташева-Виноградова,_Эльвира_Александровна.mw
@@ -1,1 +1,67 @@
-Эльвира Токташева - кумдан палыме да йоратыме марий мурызо.
+'''Эльвира Токташева''' ([[11 Пеледыш]] [[1985]], [[Морко]] [[Марий Эл]]) — марий мурызо. Марлан лектын, кызытсе [[тукымлӱм]]жӧ — Виногорова. Но сценыште тудо Эльвира Токташева лӱм денак пашам ышта, калыкыштат Токташева семынак палыме.
+== Ӱмыргорно ==
+Эльвира 1985 ийыште Пеледыш тылзын 11 кечынже Морко посёлкышто шочын. [[Палантай лӱмеш тӱвыра да сымыктыш колледж]]ыште тунем пытарымек каклык усталык рӱдерыште тыршаш тӱҥалын. Чӱчкыдын [[Марий Эл]], [[Пошкырт Эл]], [[Суас Эл]], [[Киров вел]] да моло марий кундемлаште эртыше концертыште шуаралтеш. 
+== Муро паша ==
+Эльвира Токташева шкет мурымыж дене чапланен. Но дуэт-влакымат чоҥен, тыге, [[Роза Искакова]] да [[Александр Речкин]] дене пырля мурымыжо сайын палыме улеш.
+=== [[Марий Эл Радио]]што йоҥгалтше мурыжо-влак ===
+{| border="1"
+ !Муро лӱм
+ !Семым возышо
+ !Мутым возышо
+ |-
+ !Авай
+ |Сергей Николаев
+ |Юрий Григорьев
+ |-
+ !Илыш корно
+ |Жаудат Гильманов
+ |Светлана Григорьева
+ |-
+ !Йӧратымем
+ |Жаудат Гильманов
+ |Ольга Дмитриева
+ |-
+ !Кеҥеж йӱр
+ |Вячеслав Осипов
+ |Владимир Иванов
+ |-
+ !Кече лектеш ончалеш
+ |калыкын
+ |калыкын
+ |-
+ !Май ужар мыжерыште
+ |Михаил Кузнецов
+ |Михаил Кузнецов
+ |-
+ !Морко пазар
+ |калыкын
+ |калыкын
+ |-
+ !Олмапу
+ |[[Эрик Сапаев]]
+ |[[Семён Вишневский]]
+ |-
+ !Поро кас
+ |Михаил Кузнецов
+ |Михаил Кузнецов
+ |-
+ !СМС салам
+ |[[Василий Якимов]]
+ |[[Эльвира Куклина]]
+ |-
+ !У ий вальс
+ |Олег Герасимов
+ |Семён Николаев
+ |-
+ |'''У ий модыш''' / Александр Речкин дене пырля
+ |???
+ |Светлана Григорьева (руш гыч кусарен)
+ |-
+ !Шкетын эртен
+ |Михаил Кузнецов
+ |Михаил Кузнецов
+ |-
+ |'''Шочмо кече''' / Роза Искакова дене пырля
+ |Михаил Кузнецов
+ |Михаил Кузнецов
+ |}
