*Empty MediaWiki Message*

--- a/Токташева-Виноградова,_Эльвира_Александровна.mw
+++ b/Токташева-Виноградова,_Эльвира_Александровна.mw
@@ -1,6 +1,8 @@
 '''Эльвира Токташева''' ([[11 Пеледыш]] [[1985]], [[Морко]] [[Марий Эл]]) — марий мурызо. Марлан лектын, кызытсе [[тукымлӱм]]жӧ — Виногорова. Но сценыште тудо Эльвира Токташева лӱм денак пашам ышта, калыкыштат Токташева семынак палыме.
 == Ӱмыргорно ==
 Эльвира 1985 ийыште Пеледыш тылзын 11 кечынже Морко посёлкышто шочын. [[Палантай лӱмеш тӱвыра да сымыктыш колледж]]ыште тунем пытарымек каклык усталык рӱдерыште тыршаш тӱҥалын. Чӱчкыдын [[Марий Эл]], [[Пошкырт Эл]], [[Суас Эл]], [[Киров вел]] да моло марий кундемлаште эртыше концертыште шуаралтеш. 
+
+Ешым чумырен. Марийже Владислав Виногоров дене пырля Максим эргым куштат.
 == Муро паша ==
 Эльвира Токташева шкет мурымыж дене чапланен. Но дуэт-влакымат чоҥен, тыге, [[Роза Искакова]] да [[Александр Речкин]] дене пырля мурымыжо сайын палыме улеш.
 === [[Марий Эл Радио]]што йоҥгалтше мурыжо-влак ===
