*Empty MediaWiki Message*

--- a/Кышкар:ШочмоВер%2FДокументаций.mw
+++ b/Кышкар:ШочмоВер%2FДокументаций.mw
@@ -2,9 +2,9 @@
 Шаблон '''<nowiki>{{ШочмоВер|Илем|Илемыште|Илем нерген статья}}</nowiki>''' показывает место рождения и добавляет персону в категорию по месту рождения ([[:Категорий:Илымвер_почеш_еҥ-влак|«... шочшо-влак»]]), а также в категорию [[:Категорий:Тиштер почеш палыме еҥ-влак|Тиштер почеш палыме еҥ-влак]].
 
 Параметры:
-# Название места.
-# Место в предложном падеже с предлогом ''«в»'' или ''«во»'' для создания категории по месту рождения. Может быть опущен, если получается из первого параметра добавлением предлога ''«в»'' и слово склоняется тривиально (см. {{tl|Локатив}}).
-# Ссылка на статью о месте. Может быть опущен, если совпадает с первым параметром.
+# Илемын лӱмжӧ.
+# "Кушто?" йодышлан вашмутым пуымо склонений дене илымверын лӱмжым возыман. ''ште'', ''што'' дене мучшлалтшаш. (см. {{tl|Локатив}}).
+# Илем нерген статьялан кылвер. Икымше параметр дене икгаяк гын, возаш ок кӱл.
 
 Примеры:
 
