*Empty MediaWiki Message*

--- a/Кышкар:ШочмоВер.mw
+++ b/Кышкар:ШочмоВер.mw
@@ -1,1 +1,1 @@
-<includeonly>{{#if:{{{3|}}}|[[{{{3}}}|{{{1}}}]]|[[{{{1}}}]]}}{{#if:{{NAMESPACE}}||{{категория только в статьях|Тиштер почеш палыме еҥ-влак}}{{категория только в статьях|Родившиеся {{#if:{{{2|}}}|{{{2}}}|в {{#ifeq:{{{1}}}|Ленинград|Санкт-Петербурге|{{Локатив|{{{1}}}}}}} }}}}}}</includeonly><noinclude> {{doc}}</noinclude>
+<includeonly>{{#if:{{{3|}}}|[[{{{3}}}|{{{1}}}]]|[[{{{1}}}]]}}{{#if:{{NAMESPACE}}||{{категория только в статьях|Тиштер почеш палыме ҥ-влак}}{{категория только в статьях|{{#if:{{{2|}}}|{{{2}}}|в {{#ifeq:{{{1}}}што шочшо-влак|Ленинград|Санкт-Петербурге }}}}}}</includeonly><noinclude> {{doc}}</noinclude>
