--- a/Каҥашымаш:Сапаев,_Эрик_Никитич.mw
+++ b/Каҥашымаш:Сапаев,_Эрик_Никитич.mw
@@ -40,3 +40,4 @@
 
 *'''"Сем"''' семантическое поле слова "сем" в марийском уже, чем у слова "музык", соответственно заменять слово "музык" словом "сем", считаю, некорректным. "Сем" в марийском языке, прежде всего, обозначает "мелодию", в какой-то степени в определенном контексте "музыку". Приведу пример "Симфоний - тиде ала-мыняр сем корнан (семгорнан) музык улеш". "Симфония - это музыка с несколькими мелодическими линиями". Если следовать предложенной здесь схеме то получится  "Симфоний - тиде ала-мыняр сем корнан (семгорнан) сем улеш". "Музык" - это не руссизм, это интернационализм, в эстонском есть слово "viis" - "мелодия", есть "muusika" - "музыка", в финском "sävel" - "мелодия" и "musiikki". [[Пайдаланыше:Vasli|Vasli]] 15:59, 9 Пеледыш 2011 (UTC)
 ::Струнные переводить как кылан поддерживаю. Можно ли музыку переводить как мурсем? Что вообще означает чтово мурсем?--[[Пайдаланыше:ПешСай|ПешСай]] 16:25, 9 Пеледыш 2011 (UTC)
+:::Мурсем = Моро + сем, т.е. мелодия песни. Музык я оставил бы как есть, это слово укоренилось в марийском языке и "Музыкальное ущилище" для марийца автоматически будет "музык (алный) училище". Где-то видел вместо слова "музыка" - "сылнысем", можно иногда использовать как синоним, наверное. Но такие спорные моменты можно выносить на всеобщее обсуждение. [[Пайдаланыше:Vasli|Vasli]] 10:18, 11 Пеледыш 2011 (UTC)
