--- a/Токташева-Виноградова,_Эльвира_Александровна.mw
+++ b/Токташева-Виноградова,_Эльвира_Александровна.mw
@@ -6,7 +6,7 @@
  |возымаш          = 
  |шочмаш дене лӱм = Токташева Эльвира
  |тыршымаш алан = мурызо
- |шочын    = 11.06.1985
+ |шочын    = 1985.06.11
  |шочмо вер   = {{ШочмоВер|Морко}}
  |гражданство      = Россий
  |подданство       = 
@@ -20,7 +20,7 @@
  |сайт             = 
  |Commons          = 
 }}
-'''Эльвира Токташева''' ([[11 Пеледыш]] [[1985]], [[Морко]] [[Марий Эл]]) — марий мурызо. Марлан лектын, кызытсе [[тукымлӱм]]жӧ — Виногорова. Но сценыште тудо Эльвира Токташева лӱм денак пашам ышта, калыкыштат Токташева семынак палыме.
+'''Эльвира Токташева''' ([[1985]] [[11 Пеледыш|Пеледыш 11]], [[Морко]] [[Марий Эл]]) — марий мурызо. Марлан лектын, кызытсе [[тукымлӱм]]жӧ — Виногорова. Но сценыште тудо Эльвира Токташева лӱм денак пашам ышта, калыкыштат Токташева семынак палыме.
 == Ӱмыргорно ==
 Эльвира 1985 ийыште Пеледыш тылзын 11 кечынже Морко посёлкышто шочын. [[Палантай лӱмеш тӱвыра да сымыктыш колледж]]ыште тунем пытарымек каклык усталык рӱдерыште тыршаш тӱҥалын. Чӱчкыдын [[Марий Эл]], [[Пошкырт Эл]], [[Суас Эл]], [[Киров вел]] да моло марий кундемлаште эртыше концертыште шуаралтеш. 
 
