--- a/Сапаев,_Эрик_Никитич.mw
+++ b/Сапаев,_Эрик_Никитич.mw
@@ -3,29 +3,29 @@
 Икымше сем шинчымашым [[Палантай лӱмеш тӱвыра да сымыктыш колледж|Культпросветшколышто]] налын. [[Скрипка]] дене шокташ тунемын. 1953 гыч [[Озаҥысе кугыжаныш консерваторий]]ыште композицийлан тунемын. Консерваторий деч вара Йошкар-Олаште сем училищыште туныктен. "Акпатыр" лӱман икымше марий [[Опера|оперым]] возен.
 
 == Ӱмыргорно ==
-Эрик Никитич Сапаев 1932 ийын Ӱярня тылзын 4-ше кечынже Йошкар-Олаште шочын. Йоча пагытым [[Морко|Моркышто]] да [[Йошкар-Ола]]ште эртарен. Ачаже, Никита Никифорович Сапаев, педагог, партий пашаеҥ улмо годымжо шкенжым тале организатор семын ончыктен. Партийын марий обкомын кокымшо секретарь марте шуын. Но [[1937]] ийыште [[Кылме]] тылзын Никита Сапаевым "враг народа" семын четлык коклашке шындан, тулыкеш кодшо ешлан нелылык деч посна шуко мыскылтышым чыташ логалеш.
+Эрик Никитич Сапаев 1932 ийын Ӱярня тылзын 4-ше кечынже Йошкар-Олаште шочын. Йоча пагытым [[Морко|Моркышто]] да [[Йошкар-Ола]]ште эртарен. Ачаже, Никита Никифорович Сапаев, педагог, партий пашаеҥ улмо годымжо шкенжым тале организатор семын ончыктен. Партийын марий обкомын кокымшо секретарь марте шуын. Но [[1937]] ийыште [[Кылме]] тылзын Никита Сапаевым "враг народа" семын четлык коклашке шындат, тулыкеш кодшо ешлан нелылык деч посна шуко мыскылтышым чыташ логалеш.
 
 Ты жапыште ешлан кугу полышым Никита Никифоровичын тукым шольыжо (племянник) Василий Федорович Сапаев ышта. Варажым Эрик тудым кокымшо ача семын пагалаш тӱҥалеш.
 
-Репрессий деч вара Эрикын аваже Вера Евдокимовна Сапаева йоча-влак дене пырля марийжын шочмо верышкыж, [[У Торъял кундем]] [[Чобык]] ялыш илаш куснен. Тыште Эрик школыш коштеш, стенгазетым сӱретла, шуко лудеш.
+Репрессий деч вара Эрикын аваже Вера Евдокимовна Сапаева йоча-влак дене пырля марийжын шочмо верышкыж, [[У Торъял кундем]] [[Чобык]] ялыш илаш куснен. Тыште Эрик школыш коштеш, пырдыжгазетым сӱретла, шуко лудеш.
 
 Йоча пагытыштак Эрик шкеак скрипка, гармонь, балалайка дене шокташ тунемын, марий сем-влакым нунын дене шоктен.
 
-5-ше класс гыч Немда школыш тунемаш куснен. А 7 класс деч вара, ачажын корнышкыж шогалаш шонен пыштымеке, У Торъялысе педагогик училищыш тунемаш пура. Но [[1948]] ийыште [[Теле (пагыт)|телым]] тудын илышыже йӧршын вашталтеш.
+5-ше класс гыч Немда школыш тунемаш куснен. А 7 класс деч вара, ачажын корнышкыж шогалаш шонен пыштымеке, У Торъялысе педагогике училищыш тунемаш пура. Но [[1948]] ийыште [[Теле (пагыт)|телым]] тудын илышыже йӧршын вашталтеш.
 
 === Сем тӱняшке икымше ошкыл ===
 Ик кастене, Шорыкйол тылзын уло еш дене погынен, мӧҥгыштӧ чылан шинченыт. Теле канышлан Эрик училище гыч скрипкам конден  да тудын дене шоктен. Трук пӧртыш Эрикын йолташыже да тудын дене пырля ала могай шоҥго пӧръеҥ пуреныт.
-Пӧръеҥ - йолташын туныктышыжо - Георгий Сергеевич Гусев лийын. Уна Эрикым иктаж могай семым шокташ йодын. Эрик шӱвыр семым йоҥгалтарыш. Вара эше икмыняр [[марий]] да [[руш]] калык семым.
-Самырык эргым толшо унам моктен да сем училищыш тунемаш пураш ӱжын. Изиш шоналтымеке, Эрик келшен да эрдене, уна-влак дене пырля, кум сукыр пареҥгиндым налмеке, сем шинчымаш тӱняшке тошкалын. 
+Пӧръеҥ - йолташын туныктышыжо - Георгий Сергеевич Гусев лийын. Уна Эрикым иктаж-могай семым шокташ йодын. Эрик шӱвыр семым йоҥгалтарен. Вара эше икмыняр [[марий]] да [[руш]] калык семым.
+Самырык эргым толшо уна моктен да музык училищыш тунемаш пураш ӱжын. Изиш шоналтымеке, Эрик келшен да эрдене, уна-влак дене пырля, кум сукыр пареҥгиндым налмеке, сем шинчымаш тӱняшке тошкалын. 
 
 === Сем училищыште ===
 Моштымашыжым кӱкшын аклен, Сапаевлан училищын педагогшо Л.Н. Сахаров деке келгырак шинчымашым погаш кошташ темлат. Скрипка специальность дене Сахаров тудым факультатив семымын туныкташ тӱҥалеш. Да лишыл жапыште Эрик марий [[поэт]]-влакын возымо [[почеламут]]ыштлан семым келыштараш тӱҥалеш. Валентин Никитич туныктышыжо варажым тыгерак ойлаш тӱҥалеш:
 {{Цитате|... да ты жапыште Эрик марий почеламут-влак негызеш мурым возгалаш тӱҥалеш. Урокышко мыланем эре у сочиненийжым конда да ончыкта ыле. Мый тудым эре моктенам да шкежат тидлан куаненам...}}
-Сапаев симонический оркестрыште да калык семӱзгар оркестрыште шуаралтеш. Пытартышыжлан тудо У Торъял кундемысе ойган да куштымаш сем-влакым воза.
+Сапаев симфоний оркестрыште да калык семӱзгар оркестрыште шуаралтеш. Пытартышыжлан тудо У Торъял кундемысе ойган да куштымаш сем-влакым воза.
 
-Училищын пытартыш курсышто тунеммыж годым Сапаев туныкташ тӱҥалеш. Педагогик училищыште скрипка классым вӱда. 
+Училищын пытартыш курсышто тунеммыж годым Сапаев туныкташ тӱҥалеш. Педагогике училищыште скрипка классым вӱда. 
 
-Училищыште тунеммыж годым Сапаев тӱҥ жанрлан шкаланже мурым ойырен. Тиде жанрыштак тудын тӱҥ ойыртемже - лирика чоҥалтеш. 
+Училищыште тунеммыж годым Сапаев тӱҥ жанрлан шкаланже мурым ойырен. Тиде жанрыштак тудын тӱҥ ойыртемже - лирике чоҥалтеш. 
 [[1952]] ийыште Сапаев училищым тунем пытара, но туныктышо-влак дене келшымашым арален кода. Валентин Никитич Эрикын у пашаже-влакым эскераш тӱҥалеш, марий радиошто нуным шкежат йоҥгалтара лиеш.
 
 === Озаҥысе сем консерваторийыште ===
