*Empty MediaWiki Message*

--- a/Йошкар-Ола_(ыҥ-влак).mw
+++ b/Йошкар-Ола_(ыҥ-влак).mw
@@ -2,3 +2,7 @@
 
 * [[Йошкар-Ола]] - [[Марий Эл]]ын рӱдӧ олаже.
 * [[Йошкар-Ола (Вӱд полат)|«Йошкар-Ола»]] - олаште верланыше Вӱд полат.
+
+{{Шуко ончыктымаш-влак}}
+
+[[ru:Йошкар-Ола (значения)]]
