*Empty MediaWiki Message*

--- a/Швед_йылме.mw
+++ b/Швед_йылме.mw
@@ -1,4 +1,6 @@
-'''Швед йылме''' (шведла ''svenska'') — [[индоевропысо йылме-влак|индоевропысо]] ([[Герман йылме-влак|герман]]) йылме.
+[[Файл:Distribution-sv.png|thumb|200px|Швед йылмын шарлымыже]]
+'''Швед йылме''' (шведла ''svenska'') — [[индоевропысо йылме-влак|индоевропысо]] ([[Герман йылме-влак|герман]]) йылме. Скандинав тӱшкан эрвел ӱлылтӱшкаш пура. [[Швеций]], [[Финляндий]], да Аланд отролаште шарлен. Скандинавийыште ик эн кумдан шарлыше йылме. Кутырышо-влакын чотышт индеш миллион деч шукырак.
+
 
 [[Категорий:Швед йылме]]
 [[Категорий:Герман йылме-влак]]
