*Empty MediaWiki Message*

--- a/Мохаммад.mw
+++ b/Мохаммад.mw
@@ -1,5 +1,11 @@
 {{Викификаций}}
-'''Моха‘ммад''' ({{lang-mhr|Макмат, Мамат, Пехмет}}) - [[Ислам]] тынын [[пиямбар]]же.
+'''Моха́ммад''' ({{lang-ar|محمد}} ''[[Араб серышым латинице дене возымаш|Muḥammad]]'', {{audio|Ar-muhammad.ogg|[mʊˈħæmmæd]}}, {{lang-mhr|Макма́т, Мама́т, Пехме́т}}, {{lang-ru|Муха́ммед, Моха́ммед, Магоме́т (Магоме́д)}}) - [[Ислам]] тынын [[пиямбар]]же.
+
+{{Навигаций
+  |Портал = Ислам
+  |Викицитатник = Мухаммед
+  |Викиклат = Muhammad
+  }}
 
 [[Категорий:Ислам]]
 [[Категорий:Пиямбар]]
