*Empty MediaWiki Message*

--- a/Альстрёмерий.mw
+++ b/Альстрёмерий.mw
@@ -3,7 +3,7 @@
 | сӱрет = Alstroemeria aurantiaca.jpg
 | сӱрет_вуймут = ''Alstroemeria aurantiaca''
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = Покрытосеменные (Magnoliophyta)
+| пӧлка = [[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta)
 | класс = Двудольные (Magnoliopsida)
 | тӱча = Liliales
 | йамагат = Alstroemeriaceae 
