*Empty MediaWiki Message*

--- a/Цинний.mw
+++ b/Цинний.mw
@@ -3,7 +3,7 @@
 | сӱрет = Zinnia peruviana4.jpg
 | сӱрет_вуймут = ''Zinnia peruviana''
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = Покрытосеменные (Magnoliophyta)
+| пӧлка = [[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta)
 | класс = Двудольные (Magnoliopsida)
 | тӱча = Asterales
 | йамагат = Asteraceae
