*Empty MediaWiki Message*

--- a/Стрелитций.mw
+++ b/Стрелитций.mw
@@ -3,7 +3,7 @@
 | сӱрет = Strelitzia larger.jpg
 | сӱрет_вуймут = 
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = Покрытосеменные (Magnoliophyta)
+| пӧлка = [[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta)
 | класс = Liliopsida
 | тӱча = Zingiberales
 | йамагат = Strelitziaceae
