*Empty MediaWiki Message*

--- a/Лапажерий.mw
+++ b/Лапажерий.mw
@@ -3,7 +3,7 @@
 | сӱрет = Lapageria rosea1b.SHSU.jpg
 | сӱрет_вуймут = ''Lapageria rosea''
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = Покрытосеменные (Magnoliophyta)
+| пӧлка = [[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta)
 | класс = Двудольные (Magnoliopsida)
 | тӱча = Liliales
 | йамагат = Philesiaceae 
