*Empty MediaWiki Message*

--- a/Цимбидиум.mw
+++ b/Цимбидиум.mw
@@ -3,7 +3,7 @@
 | сӱрет = Cymbidium Clarisse Austin 'Best Pink' Flowers 2000px.JPG
 | сӱрет_вуймут = 'Best Pink' 
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = Покрытосеменные (Magnoliophyta)
+| пӧлка = [[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta)
 | класс = Двудольные (Magnoliopsida)
 | тӱча = Asparagales
 | йамагат = Orchidaceae
