*Empty MediaWiki Message*

--- a/Цимбидиелла.mw
+++ b/Цимбидиелла.mw
@@ -3,7 +3,7 @@
 | сӱрет = Cymbidiella pardalina.jpg
 | сӱрет_вуймут = ''Cymbidiella pardalina'' 
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = Покрытосеменные (Magnoliophyta)
+| пӧлка = [[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta)
 | класс = Двудольные (Magnoliopsida)
 | тӱча = Asparagales
 | йамагат = Orchidaceae
