*Empty MediaWiki Message*

--- a/Бинотий.mw
+++ b/Бинотий.mw
@@ -3,7 +3,7 @@
 | сӱрет = Binotia messmeriana.jpg
 | сӱрет_вуймут = ''Binotia messmeriana''
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = Покрытосеменные (Magnoliophyta)
+| пӧлка = [[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta)
 | класс = Двудольные (Magnoliopsida)
 | тӱча = Asparagales
 | йамагат = [[Orchidaceae]]
