*Empty MediaWiki Message*

--- a/Целогина.mw
+++ b/Целогина.mw
@@ -3,7 +3,7 @@
 | сӱрет = Coelogyne mooreana.jpg
 | сӱрет_вуймут = ''Coelogyne mooreana''
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = Покрытосеменные (Magnoliophyta)
+| пӧлка = [[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta)
 | класс = Двудольные (Magnoliopsida)
 | тӱча = Asparagales
 | йамагат = Orchidaceae
