*Empty MediaWiki Message*

--- a/Орхидей-влак.mw
+++ b/Орхидей-влак.mw
@@ -4,7 +4,7 @@
 | сӱрет2 = PhalaenopsisOphrysPaphiopedilumMaxillaria.jpg
 | сӱрет_вуймут = 
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = Покрытосеменные (Magnoliophyta)
+| пӧлка = [[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta)
 | класс = Двудольные (Magnoliopsida)
 | тӱча = Asparagales
 | йамагат = '''Orchidaceae''' 
