*Empty MediaWiki Message*

--- a/Нӧлпӧ.mw
+++ b/Нӧлпӧ.mw
@@ -3,7 +3,7 @@
 | сӱрет = Tagalder8139.jpg
 | сӱрет_вуймут = ''Alnus serrulata''<br />Пурлаште пӧръеҥ йолва,<br />шолаште шушо ӱдырамаш йолва<br />
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = Покрытосеменные (Magnoliophyta)
+| пӧлка = Покрытосеменные[[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta)
 | класс = Двудольные (Magnoliopsida)
 | тӱча = Букоцветные (Fagales)
 | йамагат = [[Куэ]] (Betulaceae)
