*Empty MediaWiki Message*

--- a/Циклопогон.mw
+++ b/Циклопогон.mw
@@ -3,7 +3,7 @@
 | сӱрет = Cyclopogon elatus.jpg
 | сӱрет_вуймут = ''Cyclopogon elatus'' 
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = Покрытосеменные (Magnoliophyta)
+| пӧлка = [[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta)
 | класс = Двудольные (Magnoliopsida)
 | тӱча = Asparagales
 | йамагат = Orchidaceae
