*Empty MediaWiki Message*

--- a/Шылтымнӧшман_кушкыл.mw
+++ b/Шылтымнӧшман_кушкыл.mw
@@ -1,4 +1,4 @@
-'''Шылтымнӧшма́н ку́шкыл''' але ''Angiospermae'' ({{lang-el|ανγio}} гыч — ате, {{lang-el2|σπέρμα}} — нӧшмӧ) — [[пеледыш]] тӱледарманан [[кӱшыл кушкыл]]  [[Пӧлка (биология)|пӧлкаже]]...
+'''Шылтымнӧшма́н ку́шкыл''' ({{lang-la|Magnoliophyta}} але ''Angiospermae'', {{lang-el|ανγio}} гыч — ате, {{lang-el2|σπέρμα}} — нӧшмӧ) — [[пеледыш]] тӱледарманан [[кӱшыл кушкыл]]  [[Пӧлка (биология)|пӧлкаже]]...
 
 [[Чаранӧшман кушкыл|Чаранӧшман]] дене пырля шылтымнӧшман кушкыл-влак [[нӧшман кушкыл]] группыш пурат.
 
