*Empty MediaWiki Message*

--- a/Циприпедиум.mw
+++ b/Циприпедиум.mw
@@ -3,7 +3,7 @@
 | сӱрет = Cypripedium reginae.jpg
 | сӱрет_вуймут = ''Cypripedium reginae'' 
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = Покрытосеменные (Magnoliophyta)
+| пӧлка = [[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta)
 | класс = Двудольные (Magnoliopsida)
 | тӱча = Asparagales
 | йамагат = Orchidaceae
@@ -94,6 +94,7 @@ kentuckiense'')</font>]]
 {{stub}}
 
 [[Категорий:Орхидей-влак]]
+[[Категорий:Шылтымнӧшман]]
 
 [[az:Zöhrəçiçəyi]]
 [[bg:Циприпедиум]]
