*Empty MediaWiki Message*

--- a/Цинорхис.mw
+++ b/Цинорхис.mw
@@ -3,7 +3,7 @@
 | сӱрет = Cynorkis villosa.jpg
 | сӱрет_вуймут = ''Cynorkis villosa'' 
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = Покрытосеменные (Magnoliophyta)
+| пӧлка = [[Шылтымнӧшман кушкыл|Шылтымнӧшман]] (Magnoliophyta)
 | класс = Двудольные (Magnoliopsida)
 | тӱча = Asparagales
 | йамагат = Orchidaceae
@@ -179,6 +179,7 @@
 {{commons|Cynorkis}}
 {{stub}}
 
+[[Категорий:Шылтымнӧшман]]
 [[Категорий:Орхидей-влак]]
 
 [[en:Cynorkis]]
