*Empty MediaWiki Message*

--- a/Бинотий.mw
+++ b/Бинотий.mw
@@ -20,7 +20,7 @@
 # ''[[Binotia brasiliensis]]'' (Rolfe) Rolfe, Orchid Rev. 13: 296 (1905).
 # ''[[Binotia messmeriana]]'' Campacci, Bol. CAOB 57: 24 (2005).
 
-
+[[Категорий:Шылтымнӧшман]]
 [[Категорий:Орхидей-влак]]
 {{stub}}
 
