*Empty MediaWiki Message*

--- a/Чаранӧшман_кушкыл.mw
+++ b/Чаранӧшман_кушкыл.mw
@@ -1,5 +1,6 @@
 '''Чаранӧшман кушкыл''' - ({{lang-la|Gymnospérmae}}) — [[Иман кушкыл|иман]] да тыгайрак кушкыл влакым кучышо нӧшман кушкыл группо.
 
+{{stub}}
 [[Категорий:Чаранӧшман|*]]
 
 [[ar:عاريات البذور]]
