*Empty MediaWiki Message*

--- a/Шылтымнӧшман_кушкыл.mw
+++ b/Шылтымнӧшман_кушкыл.mw
@@ -2,7 +2,7 @@
 
 [[Чаранӧшман кушкыл|Чаранӧшман]] дене пырля шылтымнӧшман кушкыл-влак [[нӧшман кушкыл]] группыш пурат.
 
-
+{{stub}}
 [[Категорий:Шылтымнӧшман| ]]
 [[Категорий:Кушкыл пӧлка]]
 
