--- a/Лыстанпӱнчӧ.mw
+++ b/Лыстанпӱнчӧ.mw
@@ -4,7 +4,7 @@
 | сӱрет_лопкытшо = 240px
 | сӱрет_вуймут = ''Европысо лыстанпӱнчӧ'' шыжым
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = [[Иман]] (Pinophyta)
+| пӧлка = [[Иман кушкыл|Иман]] (Pinophyta)
 | класс = [[Иман]] (Pinopsida)
 | тӱча = [[Пӱнчӧ]] (Pinales)
 | йамагат = [[Пӱнчӧ]] (Pinaceae)
@@ -18,6 +18,7 @@
 == Палемдымаш-влак ==
 <references/>
 
+[[Категорий:Чаранӧшман]]
 [[Категорий:Пушеҥге]]
 
 [[ar:أرزية]]
