*Empty MediaWiki Message*

--- a/Пӱнчӧ.mw
+++ b/Пӱнчӧ.mw
@@ -4,7 +4,7 @@
 | сӱрет_лопкытшо = 250px
 | сӱрет_вуймут = Тыглай Пӱнчӧ
 | кугыжаныш = [[Кушкыл]]
-| пӧлка = [[Иман]]
+| пӧлка = [[Иман кушкыл|Иман]]
 | класс = [[Иман]] (Pinopsida)
 | тӱча = [[Пӱнчӧ тӱча|Пӱнчӧ]] (Pinales)
 | йамагат = [[Пӱнчӧ йамагат|Пӱнчӧ]] (Pinaceae)
@@ -15,6 +15,7 @@
 
 105 гыч 150 марте пӱнчӧ тӱрлык уло.
 
+[[Категорий:Чаранӧшман]]
 [[Категорий:Пушеҥге]]
 
 [[ar:صنوبر]]
