--- a/Нулго.mw
+++ b/Нулго.mw
@@ -1,6 +1,7 @@
 [[Файл:Illustration Abies alba0 clean.jpg|250px|thumb|Ош нулго]]
-'''Нулго''' ({{lang-la| Abies}} ) — чаранӧшман иман [[пушеҥге]]. [[Пӱгыльмӧ]] кӱшкӧ кушка.
+'''Нулго''' ({{lang-la| Abies}} ) — [[Чаранӧшман кушкыл|чаранӧшман]] [[Иман кушкыл|иман]] [[пушеҥге]]. [[Пӱгыльмӧ]] кӱшкӧ кушка.
 
+[[Категорий:Чаранӧшман]]
 [[Категорий:Пушеҥге]]
 
 [[an:Abies]]
