*Empty MediaWiki Message*

--- a/У_Афон.mw
+++ b/У_Афон.mw
@@ -72,7 +72,7 @@
  |add3                          = 
 }}
 
-'''У Афон''' ({{lang-ab|Гәдоуҭа}}, {{lang-ka|ახალი ათონი}}) — [[ола]] [[Абхазий]]ыште.
+'''У Афон''' ({{lang-ab|Афон Ҿыц}}, {{lang-ka|ახალი ათონი}}) — [[ола]] [[Абхазий]]ыште.
 
 [[Файл:Novoafonsky monastyr.jpg|333px|thumb|У Афон манастыр]]
 
