*Empty MediaWiki Message*

--- a/Ростов-на-Дону.mw
+++ b/Ростов-на-Дону.mw
@@ -16,7 +16,7 @@
  |регион                                  = Ростов вел
  |регион четлыкыште         =
  |кундем тӱрлык                   = Оласе йырвел
- |кундем                                 = Ростов-на-Дону{{!}}Ростов-на-Дону
+ |кундем                                 = Дон ӱмбалне Ростов{{!}}Дон ӱмбалне Ростов
  |кундем четлыкыште          = 
  |кӧргӧ шеледымаш            = 8 кундем 
  |вуйлатыше тӱрлык                = Олавуй
@@ -47,12 +47,12 @@
  |add1                     = 
 }}
 
-'''Ростов-на-Дону''' ({{lang-ru|Ростов-на-Дону}}) - ола [[Россий|Российыште]], [[Ростов вел|Ростов велын]] кучем рӱдыжӧ, [[Кечывалвел федерал йырвел|Кечывалвел федерал йырвелын]] рӱдыжӧ.
+'''Дон ӱмбалне Ростов''' ({{lang-ru|Ростов-на-Дону}}) - ола [[Россий|Российыште]], [[Ростов вел|Ростов велын]] кучем рӱдыжӧ, [[Кечывалвел федерал йырвел|Кечывалвел федерал йырвелын]] рӱдыжӧ.
 
-Ростов-на-Дону — калыкчот шотышто луымшо ола Российыште, кӱлешан экономик, транспорт да тӱвыра рӱдыжӧ.
+Дон ӱмбалне Ростов — калыкчот шотышто луымшо ола Российыште, кӱлешан экономик, транспорт да тӱвыра рӱдыжӧ.
 
 == Эртымгорно ==
-[[Файл:Rostov-on-don skyline.jpg|thumb|left|250px|Ростов-на-Дону йӱдым]]
+[[Файл:Rostov-on-don skyline.jpg|thumb|left|250px|Дон ӱмбалне Ростов йӱдым]]
 
 {{Ола-миллионерла Российыште}}
 
