*Empty MediaWiki Message*

--- a/Кышкар:ИВ.mw
+++ b/Кышкар:ИВ.mw
@@ -26,7 +26,7 @@
 {{ИВ/|{{{кумдык|}}}|[[Кумдык]]|{{{кумдык}}} [[тӧткылан уштыш|уш²]]|{{{эл|}}}}}
 {{ИВ/|{{{ИВ рӱдын кӱкшытшӧ|}}}|{{#if:{{{кӱкшыт тӱрлык|}}}|[[{{ucfirst:{{{кӱкшыт тӱрлык}}}}}]]|[[Кӱкшыт теҥыз ӱмбалне|Рӱдын кӱкшытшӧ]]}}|{{{ИВ рӱдын кӱкшытшӧ|}}} [[метр|м]]|{{{эл|}}}}}
 {{ИВ/|{{{климат|}}}|[[климат|Климат тӱрлык]]|{{{климат}}}|{{{эл|}}}}}
-{{ИВ/|1={{{официал йылме|}}}|2=Официал йылме|3={{#ifexist:{{{официал йылме}}} йылме|{{{официал йылме}}} йылме{{!}}{{{официал йылме}}}|[[{{{официал йылме}}}]]}}{{#if:{{{официал йылме-ref|}}}|{{anchor|_lang_ref}}&nbsp;[[#_lang_note|'''*''']]}}|4={{{эл|}}}}}
+{{ИВ/|1={{{официал йылме|}}}|2=Официал йылме|3={{#ifexist:{{{официал йылме}}} йылме|{{{официал йылме}}} йылме{{!}}{{{официал йылме}}}|{{{официал йылме}}}}}{{#if:{{{официал йылме-ref|}}}|{{anchor|_lang_ref}}&nbsp;[[#_lang_note|'''*''']]}}|4={{{эл|}}}}}
 {{ИВ/|1={{{калыкчот|}}}|2=Калыкчот|3={{{калыкчот}}}&nbsp;{{#ifeq:{{#expr:{{{калыкчот}}}*0}}|0|{{plural:{{{калыкчот}}}|еҥ|еҥ|еҥ}}|еҥ}}&nbsp;{{#if:{{{еҥшотлымаш ий|}}}|([[{{{еҥшотлымаш ий}}}]])}}|4={{{эл|}}}}}
 {{ИВ/|{{{чаклык|}}}|Чаклык|{{{чаклык}}}&nbsp;еҥ/уш²|{{{эл|}}}}}
 <!--Автоматическин чаклыкым шотлаш кӱлеш мо? #if калыкчот AND кумдык
