*Empty MediaWiki Message*

--- a/Гагра.mw
+++ b/Гагра.mw
@@ -40,7 +40,7 @@
  |кӱкшыт тӱрлык                   = 
  |ИВ рӱдын кӱкшытшӧ         = 
  |климат                                = 
- |официал йылме                = абхаз йылме, руш йылме
+ |официал йылме                = [[абхаз йылме]], [[руш йылме]]
  |официал йылме-ref           = 
  |калыкчот                           = 15,7
  |еҥшотлымаш ий               = 2008
