--- a/Гудаута.mw
+++ b/Гудаута.mw
@@ -40,7 +40,7 @@
  |кӱкшыт тӱрлык                   = 
  |ИВ рӱдын кӱкшытшӧ         = 
  |климат                                = 
- |официал йылме                = абхаз йылме, руш йылме
+ |официал йылме                = [[абхаз йылме]], [[руш йылме]]
  |официал йылме-ref           = 
  |калыкчот                           = 7738
  |еҥшотлымаш ий               = 2003
