*Empty MediaWiki Message*

--- a/Эрвел.mw
+++ b/Эрвел.mw
@@ -1,6 +1,6 @@
 {{Марлаҥдымаш}}
 [[Файл:CompassRose16 E.png|thumb|100px|Эрвел [[Мардеж роза|мардеж розаште]].]]
-'''Эрвел''' — ик ныл [[Тӱня вел-влак|тӱня вел]] гыч. Там, где восходит солнце.
+'''Эрвел''' {{lang-ru|''восток''}} — Ныл [[Тӱня вел-влак|тӱня вел]] гыч иктыже. Кече кынелме вел.
 
 Марий тамга — '''Э''', тӱнямбал — '''E''' (''east'').
 
