--- a/Ялкайн,_Яныш_Ялкаевич.mw
+++ b/Ялкайн,_Яныш_Ялкаевич.mw
@@ -17,3 +17,5 @@
 Тыге, Я.Ялкайн чолга фольклорист улмаш, тӱрлӧ калык мурым, такмакым погымаште тыршен, шымлыме пашаштат чулымлыкшым ончыктен, ятыр ӱшандарыше ойым каласен, фольклористикыште волгыдо кышам коден.
 
 [[Категорий:Марий серызе]]
+
+[[ru:Ялкаев, Яныш Ялкаевич]]
