*Empty MediaWiki Message*

--- a/5_вӱдшор.mw
+++ b/5_вӱдшор.mw
@@ -3,15 +3,23 @@
 == Пайрем-влак==
 * {{флагификаций|Марий Эл}} — [[Товло кече]]
 == Лӱмгече ==
-
+Вӱдшор тылзын визымше кечынже Акакий, Лидия, Никон, Вацлав, Исидор–влакын лӱм кечышт.
 == Мо лийын ==
 ''Тыгак ончо: [[:Категорий:5 Вӱдшор Мо лийын]]''
-* [[1938]] — «Салика» спектакльын 1-ше премьерыже эртен.
-* [[1963]] — [[Эрик Сапаев]]ын «Акпатыр» [[опер]]ын премьерыже эртен.
-
+* [[1938]] – Марий Кугыжаныш драме театрын сценыштыже Сергей Николаевын «Салика» пьесыж почеш шындыме спектакльым икымше гана модын ончыктеныт.
+* [[1963]] — [[Эрик Сапаев]]ын «Акпатыр» [[Опера|оперын]] премьерыже эртен.
 
 == Кӧ шочын ==
 ''Тыгак ончо: [[:Категорий:5 Вӱдшор Кӧ шочын]]''
+* [[1928]] – [[Михаил Данилович Самусев]], йӧнозанлык пашаеҥ, Марий Республикын сулло шанчыенже да техникын пашаеҥже. [[Йошкар-Ола]]шке 1947-ше ийыште толын. Машина чоҥымо да «Контакт»  заводлаште, «Биомашприбор» ушемыште тыршен. Пашажым аклен, тудым Октябрь Революций, Ленинын да Йошкар Знамя Паша орден-влак дене палемденыт. 
+
+* [[1950]] – Валерий Иванович Михеев, профсоюз пашаеҥ. Паша корныжо [[Поранча кундем]]ысе тӱвыра пӧртыштӧ тӱҥалын, вара «Контакт» заводыштат ятыр ий тыршен. 1985-ше ий гыч профсоюз пашаште: Марий областной профсоюз–влакын ушем пӧлкан вуйлатышыже лийын. 1994-ше ийыште Кугыжаныш тӧнежыште тыршыше-влакын профсоюз комитетым вуйлаташ шогалын.  
+
+* [[1945]] – [[Виктор Петрович Антихович]], спортсмен да тренер, Россий Федерацийын сулло тренерже. Ончыч Йошкар-Оласе «Спартак» командыште модын, вара Куйбышев, Озаҥ, Ростов-на-Дону, Самара, Тольятти, Сочи, Владивосток олалаште футбол команды-влакым вуйлатен.  
+
+* [[1958]] – [[Раисия Алексеевна Кудрявцева]], ийыште туныктыш пашаеҥ шочын. Шкеже тудо Медведево кундем Шеклянур ял гыч.  1980-ше ий гыч Марий кугыжаныш  пединститутышто пашам ышташ тӱҥалын. 5 ий Марий туныктыш институтын [[ректор]]жат лийын. Пашаже-влак утларакше марий сылнымут дене кылдалтыныт. Филологий шанче кандидат. 
+
+* [[1950]] – Василий Илларионович Эманов, [[Мари-Турек кундем]]ыште шочын-кушшо тале спортсмен. Европысо да тӱнямбалсе чемпионатлаштат тудо шке вийжым терга. 
 
 == Кӧ колен ==
 ''Тыгак ончо: [[:Категорий:5 Вӱдшор Кӧ колен]]''
