*Empty MediaWiki Message*

--- a/6_вӱдшор.mw
+++ b/6_вӱдшор.mw
@@ -1,8 +1,10 @@
 {{Вӱдшор}}
 '''6 Вӱдшор''' — [[григориан кечышот]] почеш идалыкын 96-шо (кужемдыме ийлаште 97) кечыже. Идалык пытыме марте 269 кече кодеш.
 == Пайрем-влак ==
+{{Флагификаций|Россий}} — следствий органыште тыршыше-влакын пайремышт палемдалтеш.
 
 == Лӱмгече ==
+Вӱдшор тылзын кудымшо кечынже Артем, Захар, Петр, Степан, Яков-влакын лӱм кечышт. 
 
 == Мо лийын ==
 ''Тыгак ончо: [[:Категорий:6 Вӱдшор Мо лийын]]''
@@ -10,7 +12,12 @@
 == Кӧ шочын ==
 ''Тыгак ончо: [[:Категорий:6 Вӱдшор Кӧ шочын]]''
 * [[1933]] — [[Лаврентьев, Зосим Федорович|Зосим Федорович Лаврентьев]], марий живописец да график.
+
 * [[1938]] — [[Артамонов, Юрий Михайлович|Юрий Михайлович Артамонов]], марий прозаик.
+
+* [[1962]] – [[Сергей Владимирович Житинкин]], мер пашаеҥ. Мер пашашке тудо 1996-шо ийыште ушнен: Афганистанысе сар инвалид да ветеран-влак ушемын вуйлатышыже лийын. 5 ий «Единство» мер толкын деч Россий кугыжаныш думын депутатше, а 2004-ше ий гыч «Единая Россия» партий деч депутат улеш. 
+
+* [[1946]] – Игорь Натанович Поляков, энергетик пашаеҥ, Россий Федерацийын сулло энергетикше. 1987-ше ий гыч тудо «Мариэнерго» ушымште пашам ышта. Инженерын алмаштышыжлан тӱҥалын, вуйлатыше марте шуын.  
 
 == Кӧ колен ==
 ''Тыгак ончо: [[:Категорий:6 Вӱдшор Кӧ колен]]''
