*Empty MediaWiki Message*

--- a/Артамонов,_Юрий_Михайлович.mw
+++ b/Артамонов,_Юрий_Михайлович.mw
@@ -1,6 +1,51 @@
-'''Артамонов Юрий Михайлович''' ([[1938]] [[6 Вӱдшор]], [[Маскасола кундем]] Ятман ял) – кумдан палыме марий писатель, [[Олык Ипай лӱмеш кугыжаныш премий|марий комсомолын Олык Ипай лӱмеш премийын лауреатше]]. [[Марий комунна (газет)|«Марий коммуна» газет]] да [[Ончыко (журнал)|«Ончыко» журнал]] редакцийлаште тыршен.
+{{Палыме еҥ
+ |лӱм              = 
+ |оригинал лӱм   = Юрий Михайловч Артамонов
+ |сӱрет          = Artamonov Yurij Mihajlovich.jpg
+ |сӱретын лопкытшо           = 250px
+ |возымаш          = Юрий Артамонов, марий писатель
+ |шочмаш дене лӱм = Юрий Михайлович Артамонов
+ |тыршымаш алан = сылнымут
+ |шочын    = 
+ |шочмо вер   = {{ШочмоВер|Маскасола кундем, Ятман ял}}
+ |гражданство      = 
+ |подданство       = 
+ |колен      = 
+ |колымо вер     = {{КолымоВер|}}
+ |ача             = 
+ |ава             = 
+ |пелаш           = 
+ |йоча-влак             = 
+ |чап пӧлек да премий = Марий комсомолын Олык Ипай лӱмеш премийын лауреатше
+ |сайт             = 
+ |Commons          = 
+}}
+'''Артамонов Юрий Михайлович''' ([[1938]] [[6 Вӱдшор]], [[Маскасола кундем]] Ятман ял — [[2002]]) – кумдан палыме марий писатель, [[Олык Ипай лӱмеш кугыжаныш премий|марий комсомолын Олык Ипай лӱмеш премийын лауреатше]] (1978). [[Марий комунна (газет)|«Марий коммуна» газет]] да [[Ончыко (журнал)|«Ончыко» журнал]] редакцийлаште тыршен.
 
 == Ӱмыргорно ==
 Юрий Артамонов Медведево районысо Ятман ялыште 1938-ше ий 6 апрельыште шочын. Паша корныжо тӱҥалтыш школышто тӱҥалын, шочмо йылмым да литературым туныктен.  Икымше книгаже – «Совет салтак» - кӱчык ойлымаш-влак сборник. Шке ойлымаш ден повестьлаште писатель марий ял, озанлык паша, шочмо мланде, калыкше нерген серен. «Кузе илет пошкудем?», «Шӱдыр ер», «Изи Вичу». «Перкан лийже» да тулеч моло. Тудын возымыжым казах, мордва, удмурт йылмылашке кусарыме. Шкежат моло калык йылме гыч ятыр произведенийым марлаҥден. Юрий Артамонов - Марий комсомолын Олык Ипай лӱмеш премийын лауреатше. 
+
+== Сылнымут паша ==
+[[Файл:Artamonov korno.jpg|200px|thumb|"Корно воктене мардежвакш" книган комжо.]]
+Книга-влак:
+* Советский салтак : ойлымаш-вл. [Советский солдат : рассказы]. Йошкар-Ола, 1962. 32 с.
+* Сеҥаш лийдыме вий : повесть [Непобедимая сила]. Йошкар-Ола, 1968. 68 с.
+* Шӱдыр ер : ойлымаш-вл. [Звездное озеро : рассказы]. Йошкар-Ола, 1972. 156 с. 
+* Кузе илет, пошкудем? : мыскара ойлымаш-вл. [Как поживаешь, сосед? : юмор. рассказы]. Йошкар-Ола, 1975. 128 с.
+* Изи Вичу : ойлымаш-вл. [Маленький Вичу : рассказы]. Йошкар-Ола, 1976. 44 с.
+* Кайык ӱжын ужата : повесть ден ойлымаш-вл. [Когда поет жаворонок : повести и рассказы]. Йошкар-Ола, 1980. 288 с.
+* Перкан кинде : повесть ден ойлымаш [Обильные хлеба: повесть и рассказ]. Йошкар-Ола, 1984. 320 с.
+* Кок повесть [Две повести]. Йошкар-Ола, 1988. 332 с.
+* Тарля кован кудывечыже : повесть [Во дворе бабушки Дарьи]. Йошкар-Ола, 1992. 72 с.
+* Йӧратет - йӧратем : йӧратымаш каҥаш [Любишь - люблю : уроки любви]. Йошкар-Ола, 1992. 96 с.
+* Чавайнын куэже : повесть-вл. [Березка Чавайна]. Йошкар-Ола, 1995. 428 с.
+* Качыйӱыш : мыскара повесть-вл. [Смотрины женихов : юмор. повести]. Йошкар-Ола, 2000. 484 с.
+* Корно воктене мардежвакш : ойлымаш-вл. [Мельница у дороги : рассказы]. Йошкар-Ола, 2006. 546 с.
+* Звездное озеро : повести и рассказы / пер. на рус. А. Фомина. М.: Современник, 1975. 240 с.
+* Вкус земляники : рассказы / пер. на рус. А.Шавкуты. М.: Современник, 1979. 204 с.
+* Малиновые облака : повести и расказы. Йошкар-Ола, 1991. 384 с.
+== Кылвер-влак ==
+[http://www.pisatelimariel.org/pisateli.php?sel=preview&id_pisatel=41 Марий Элысе серызе-влак нерген сайт]
+[http://aboutmari.com/wiki/%D0%90%D1%80%D1%82%D0%B0%D0%BC%D0%BE%D0%BD%D0%BE%D0%B2,_%D0%AE%D1%80%D0%B8%D0%B9_%D0%9C%D0%B8%D1%85%D0%B0%D0%B9%D0%BB%D0%BE%D0%B2%D0%B8%D1%87 aboutmari.com сайтыште Юрий Артамонов нерген.]
 
 [[Категорий:Марий серызе]]
