*Empty MediaWiki Message*

--- a/Артамонов,_Юрий_Михайлович.mw
+++ b/Артамонов,_Юрий_Михайлович.mw
@@ -11,7 +11,7 @@
  |гражданство      = 
  |подданство       = 
  |колен      = 
- |колымо вер     = {{КолымоВер|}}
+ |колымо вер     = 
  |ача             = 
  |ава             = 
  |пелаш           = 
