--- a/1933.mw
+++ b/1933.mw
@@ -3,7 +3,7 @@
 * [[20 пеледыш]] - Марий радио икымше гана эфирыш лектын.
 == Кӧ шочын ==
 * [[23 пургыж]] - [[Горный, Иван Иванович|Иван Иванович Горный (Тарьянов)]], марий поэт, кусарыше.
-* [[21 ӱярня]] - [[Жибрик, Нина Йосифовна|Нина Йосифовна Жибрик]], марий поэт.
+* [[21 ӱярня]] - [[Жибрик, Нина Иосифовна|Нина Иосифовна Жибрик]], марий поэт.
 * [[6 Вӱдшор]] - [[Лаврентьев, Зосим Федорович|Зосим Федорович Лаврентьев]], марий живописец да график.
 
 == Кӧ колен ==
