--- a/7_вӱдшор.mw
+++ b/7_вӱдшор.mw
@@ -1,15 +1,20 @@
 {{Вӱдшор}}
 '''7 Вӱдшор''' — [[григориан кечышот]] почеш идалыкын 97-ше (кужемдыме ийлаште 98) кечыже. Идалык пытыме марте 268 кече кодеш.
 == Пайрем-влак==
-
+* [[Файл:Earth flag PD.jpg|25px]] Тӱнямбалне [[Тӱнямбал тазалык кече|тазалык кечым]] палемдат. Лач ты кечын [[1948]]-ше ийыште тӱнямбалсе тазалык аралтыш ушемым почыныт. 
+* {{Флагификаций|Россий}} Подводник-влакым шарныме кече! 1989 ийыште вӱд йымак кайыше «Комсомолец» пушын экипажшым шарныме лӱмеш эртаралтеш.
+* {{Флагификаций|Россий}} [[Рунет|РУНЕТын]] шочмо кечыже! РУНЕТ – тиде рушла Интернет.
 == Лӱмгече ==
-
+* Тихон, Донат, Иоанн, Руфин–влакын лӱм кечышт.
 == Мо лийын ==
 ''Тыгак ончо: [[:Категорий:7 Вӱдшор Мо лийын]]''
 
 == Кӧ шочын ==
 ''Тыгак ончо: [[:Категорий:7 Вӱдшор Кӧ шочын]]''
-
+* [[1947]] — [[Александр Леонидович Азин]], шанче да тазалык аралтыш пашаеҥ. [[Марий Эл]]ышке 1997-ше ийыште толын: сар ветеран-влакым эмлымверыште тӱҥ эмлызын  алмаштышыжлан тыршаш тӱҥалын, тыгодымак [[Марий кугыжаныш университет]]ысе айдемын физиологий да анатомий кафедрын профессоржо лийын. 130 наре шанче пашан авторжо. Тудын ыштыме «Симпатокор» приборжо Брюссельысе ончерыште Шӧртньӧ медальым сеҥен налын.
+* [[1954]] — [[Михаил Аркадьевич Зайцев]], пашазе. [[Морко]] посёлкышто шочын. 35 ий тудо МарБумКомбинатыште тыршен. Совет Ушем  кӱшыл погынын депутатшат лийын. Пашажым аклен, тудым 3-шо степенян Паша Чап орден дене палемденыт.
+* [[1956]] — [[Вениамин Витальевич Кельдыбай]], инженер-технолог. Шкеже тудо [[У Роҥго кундем]] гыч. 1978-ше ийыште  «Кристалл» ушемыште пашам ышташ тӱҥалын, а 1993-шо ий гыч ты ушемынак пӧлка вуйлатышыже. Электронасос агрегат-влакым ыштымаште тудынат кугу надырже уло. Марий Эл кугыжаныш премийын лауреатше.
+* [[1974]] — [[Лариса Михайловна Андриянова]], артистка. Свердлов вел Куркеде лӱман марий ял гыч. Ынде ятыр ий талантан актриса [[Марий самырык театр]]ын сценыже гыч калыкым шке мастарлыкше дене куандарен шога.
 == Кӧ колен ==
 ''Тыгак ончо: [[:Категорий:7 Вӱдшор Кӧ колен]]''
 
