*Empty MediaWiki Message*

--- a/8_вӱдшор.mw
+++ b/8_вӱдшор.mw
@@ -1,20 +1,25 @@
 {{Вӱдшор}}
 '''8 Вӱдшор''' — [[григориан кечышот]] почеш идалыкын 98-ше (кужемдыме ийлаште 99) кечыже. Идалык пытыме марте 267 кече кодеш.
 == Пайрем-влак==
-
-== Лӱмгече ==
-
+* [[Файл:Roma flag.svg|25px]] Чыган-влакын калык-влак кокласе кечышт.
+{{Флагификаций|Россий}}, {{Флагификаций|Белоруссий}} — Сарзе комиссариат пашаеҥ-влакын кечышт
+== Лӱмгече (тошто стиль почеш 26 Ӱярня) ==
+* Танле лӱм-влак: [[Алла]], [[Анна (лӱм)|Анна]], [[Василий]], [[Гавриил]], [[Ириней]], [[Лариса]], [[Марк]].
+* Католик лӱм-влак: [[Цезария]], [[Дионисий]], [[Януарий]].
 == Мо лийын ==
 ''Тыгак ончо: [[:Категорий:8 Вӱдшор Мо лийын]]''
 
 == Кӧ шочын ==
 ''Тыгак ончо: [[:Категорий:8 Вӱдшор Кӧ шочын]]''
-* [[1958]] — [[Геннадий Леонидович Сабанцев-Ояр]], марий поэт, кусарыше.
-
+* [[1958]] — [[Сабанцев, Геннадий Леонидович|Геннадий Леонидович Сабанцев-Ояр]], марий [[поэт]], кусарыше, журналист, Марий Элын сулло журналистше.
+* [[1958]] — Татьяна Валентиновна Гайфуллина, бизнесъеҥ. Йошкар-Олаште шочын. Ятыр ий тудо оласе тӱрлӧ ушемлаште экономистлан пашам ыштен. 1995-ше ийыште «Мегапол» ушемын вуйлатышыже лийын, но 3 ий гыч бизнес пашашке куснен.
+* [[1947]] — Григорий Паклюсевич Пашуткин, спортсмен да энергетик пашаеҥ. [[Пошкырт Эл]] [[Калтаса кундем]]ысе Кокуш ялыште   шочын. «Энергия» ушемын тӱҥ инженерже тырша. Спорт денат кугу кылым куча. Тӱрлӧ марафонлаште шке вийжым терга.
+* [[????]] — Иван Алексеевич Малинин, туныктыш пашаеҥ. Паша корныжо Куженер районысо Руш-Шой кыдалаш школышто тӱҥалын. 1998-ше ий гыч Иван Алексеевич ты школ вуйлатышын алмаштышыже лийын. 15 ий жапыште «Международник»   политик клубын президентше лийын.
 == Кӧ колен ==
 ''Тыгак ончо: [[:Категорий:8 Вӱдшор Кӧ колен]]''
 
 == Калык пале ==
+* Гавриил кече. Гаврииллан межым шӱдырет гын - шот ок лек.
 
 {{commonscat|8 April}}
 
