*Empty MediaWiki Message*

--- a/8_вӱдшор.mw
+++ b/8_вӱдшор.mw
@@ -2,7 +2,7 @@
 '''8 Вӱдшор''' — [[григориан кечышот]] почеш идалыкын 98-ше (кужемдыме ийлаште 99) кечыже. Идалык пытыме марте 267 кече кодеш.
 == Пайрем-влак==
 * [[Файл:Roma flag.svg|25px]] Чыган-влакын калык-влак кокласе кечышт.
-{{Флагификаций|Россий}}, {{Флагификаций|Белоруссий}} — Сарзе комиссариат пашаеҥ-влакын кечышт
+* {{Флагификаций|Россий}}, {{Флагификаций|Белоруссий}} — Сарзе комиссариат пашаеҥ-влакын кечышт
 == Лӱмгече (тошто стиль почеш 26 Ӱярня) ==
 * Танле лӱм-влак: [[Алла]], [[Анна (лӱм)|Анна]], [[Василий]], [[Гавриил]], [[Ириней]], [[Лариса]], [[Марк]].
 * Католик лӱм-влак: [[Цезария]], [[Дионисий]], [[Януарий]].
