*Empty MediaWiki Message*

--- a/Unicode.mw
+++ b/Unicode.mw
@@ -1,9 +1,11 @@
 [[Файл:Unicode logo.svg|right|Unicode Consortium]]
 '''Юнико́д''' але '''Унико́д''' — Текстысе тиштым [[кодлымаш]] тӱнямбал стандарт, кажне тиштылан 2 гыч 6 марте байт пуалтеш.
-Стандартым 1991 ийыште «Юникод Консорциум» коммерцдыме организаций темлен. Тиде стандартым кучылтмаш шуко тӱрлӧ симбылым {{comment|кодлаш|закодировать}} (китай иероглиф, математик симбыл, грек, латинице, кириллице йӱкпале-влакым) йӧным пуа.
+Стандартым 1991 ийыште «Юникод Консорциум» коммерцдыме организаций темлен. Тиде стандартым кучылтмаш шуко тӱрлӧ тиштым {{comment|кодлаш|закодировать}} (китай иероглиф, математик тиштым, грек, латинице, кириллице йӱкпале-влакым) йӧным пуа.
 
-Юникод стандартыште код-влакым тӱшка дене пайлыме. U+0000 гыч U+007F марте код тӱшка [[ASCII]] стандартын симбылже-влакым налеш. Умбакыже тӱрлӧ тиште-влак гыч тамга, пунктуаций тамга да техник симбыл-влак верланеныт.
-Южо код-влак але уке улыт, но шушаш жапыште садыгак нуно шочыт, нунын дене пайдаланаш тӱҥалыт, сандене нунылан Юникод стандартыште ончылгоч яра верым кодымо. Кириллицын симбылже-влаклан U+0400 гыч U+052F марте, U+2DE0 гыч U+2DFF марте, U+A640 гыч U+A69F марте верым пуымо.
+Юникод стандартыште код-влакым тӱшка дене пайлыме. U+0000 гыч U+007F марте код тӱшка [[ASCII]] стандартын тиште-влакым налеш. Умбакыже тӱрлӧ тиште-влак гыч тамга, пунктуаций тамга да техник тиште-влак верланеныт.
+Южо код-влак але уке улыт, но шушаш жапыште садыгак нуно шочыт, нунын дене пайдаланаш тӱҥалыт, сандене нунылан Юникод стандартыште ончылгоч яра верым кодымо. Кириллицын тиштыже-влаклан U+0400 гыч U+052F марте, U+2DE0 гыч U+2DFF марте, U+A640 гыч U+A69F марте верым пуымо.
+
+Чӱчкыдын юникодым UTF возыт, мутлан:  UTF-8, UTF-16, UTF-32.
 
 [[Категорий:Информатике]]
 
