*Empty MediaWiki Message*

--- a/Сабанцев,_Геннадий_Леонидович.mw
+++ b/Сабанцев,_Геннадий_Леонидович.mw
@@ -20,5 +20,5 @@
  |сайт             = 
  |Commons          = 
 }}
-'''Геннадий Сабанцев''' (1958 ий [[8 Вӱдшор]], [[Кужэҥер кундем]] Йырмарий ял) — кумдан палыме [[поэт]] да журналист, Марий Элын сулло журналистше. Лудшо-влак тудым Геннадий Сабанцев-Ояр псевдоним дене палат.
+'''Геннадий Сабанцев''' ([[1958]] ий [[8 Вӱдшор]], [[Кужэҥер кундем]] Йырмарий ял) — кумдан палыме [[поэт]] да журналист, Марий Элын сулло журналистше. Лудшо-влак тудым Геннадий Сабанцев-Ояр псевдоним дене палат.
 Шкеже тудо Куженер район гыч. Шке жапыштыже «Пачемыш» ден «Пионер йӱк» журналлаште, «Ямде лий» да «Кугарня» газет-влак редакцийыште тыршен. «Кинде-шинчал», «Чытамсыр курым», «Нумалтыш» [[почеламут]] сборник-влакын авторжо.
